--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "moment": "^2.29.3",
+    "mongodb": "^4.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
