--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "axios": "^0.27.2",
     "moment": "^2.29.3",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
