--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.27.2",
+    "gray-matter": "^4.0.3",
     "moment": "^2.29.3",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
